<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:advanceddisplay="http://schemas.android.com/apk/res/com.cyanogenmod.settings.device">

    <!-- Screen -->
    <PreferenceCategory
            android:title="@string/screen_colors_title">

        <!-- mDNIe Scenario modes -->
        <com.cyanogenmod.settings.device.mDNIeScenario
                android:key="mdnie_scenario"
                android:title="@string/mdnie_scenario_title_head"
                android:summary="@string/mdnie_scenario_summary_head"
                android:entries="@array/mdnie_scenario_entries"
                android:entryValues="@array/mdnie_scenario_entries_values"
                android:defaultValue="0" />

        <!-- mDNIe Mode -->
        <com.cyanogenmod.settings.device.mDNIeMode
                android:key="mdnie_mode"
                android:title="@string/mdnie_mode_title_head"
                android:summary="@string/mdnie_mode_summary_head"
                android:entries="@array/mdnie_mode_entries"
                android:entryValues="@array/mdnie_mode_entries_values"
                android:defaultValue="0" />

        <!-- mDNIe Negative mode -->
        <com.cyanogenmod.settings.device.mDNIeNegative
                android:key="mdnie_negative"
                android:title="@string/mdnie_negative_title_head"
                android:summary="@string/mdnie_negative_summary_head"
                android:entries="@array/mdnie_negative_entries"
                android:entryValues="@array/mdnie_negative_entries_values"
                android:defaultValue="0" />
    </PreferenceCategory>

    <!-- Touchwake -->
    <PreferenceCategory android:key="touchwake"
            android:title="@string/touchwake_title">
        <SwitchPreference
                android:key="touchwake_enable"
                android:title="@string/touchwake_enable_title"
                android:summary="@string/touchwake_enable_summary"
                android:persistent="true"
                android:defaultValue="false" />
        <com.cyanogenmod.settings.device.SeekBarPreference
                android:key="touchwake_timeout"
                android:title="@string/touchwake_timeout_title"
                android:summary="@string/touchwake_timeout_summary"
                android:max="30"
                advanceddisplay:min="1"
                advanceddisplay:unitsLeft=""
                advanceddisplay:unitsRight=" Seconds"
                android:persistent="true"
                android:dependency="touchwake_enable"
                android:defaultValue="5" />
    </PreferenceCategory>

</PreferenceScreen>
